--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,12 +12,12 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
-    - name: Install Mono and OpenJDK 11
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y mono-complete
-        sudo apt install -y openjdk-11-jdk
+        
+    - uses: awalsh128/cache-apt-pkgs-action@latest
+      name: Install Mono and OpenJDK 11
+      with:
+        packages: mono-complete openjdk-11-jdk
+        version: 1.0
 
     - name: Cache Mendix mxbuild
       uses: actions/cache@v2
@@ -47,7 +47,6 @@ jobs:
          repo_token: "${{ secrets.GITHUB_TOKEN }}"
          automatic_release_tag: "latest"
          prerelease: false
-         unprotected: true
          title: "Mendix deploy achieve"
          files: |
               *.mda
