--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       uses: marvinpinto/action-automatic-releases@v1.2.1
       with:
          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-         automatic_release_tag: ""
+         automatic_release_tag: "mda"
          prerelease: false
          title: "Mendix deploy achieve"
          files: |
